<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/text_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/text_main_menu"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_play_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_play_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_options" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_help" />

    </LinearLayout>

</RelativeLayout>